Fixed nav bar gap

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+
 ul {
     list-style-type: none;
     margin: 0;
